force-app/main/default/objects/Beneficiary__c/Beneficiary__c.object-meta.xml
<CustomObject>
    <description>Used for Client Acceptance as a list of beneficiaries.</description>
    <label>Beneficiary</label>
    <nameField>
        <label>Person full name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>