force-app/main/default/objects/Beneficiary__c/fields/Basis_of_beneficial_ownership__c.field-meta.xml
<CustomField>
    <fullName>Basis_of_beneficial_ownership__c</fullName>
    <label>Basis of beneficial ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>