force-app/main/default/objects/Beneficiary__c/fields/Client_Acceptance_Form__c.field-meta.xml
<CustomField>
    <fullName>Client_Acceptance_Form__c</fullName>
    <label>Client Acceptance Form</label>
    <referenceTo>Client_Acceptance_Form__c</referenceTo>
    <relationshipLabel>Beneficiaries</relationshipLabel>
    <relationshipName>Beneficiaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>