force-app/main/default/objects/Beneficiary__c/fields/ID_verified_by__c.field-meta.xml
<CustomField>
    <fullName>ID_verified_by__c</fullName>
    <label>ID verified by:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>